@@ -163,6 +163,11 @@ Features
 Bug Fixes
 ---------
 
+- It was not possible to use ``pyramid.httpexceptions.HTTPException`` as
+  the ``context`` of an exception view as very general catchall for
+  http-related exceptions when you wanted that exception view to override the 
+  default exception view.  See https://github.com/Pylons/pyramid/issues/985
+
 - When the ``pyramid.reload_templates`` setting was true, and a Chameleon 
   template was reloaded, and the renderer specification named a macro 
   (e.g. ``foo#macroname.pt``), renderings of the template after the template
